--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 		<script type="text/javascript" src="http://threejs.org/examples/js/postprocessing/ShaderPass.js"></script>
 		<script type="text/javascript" src="http://threejs.org/examples/js/postprocessing/RenderPass.js"></script>
 		<!-- App -->
+		<script type="text/javascript" src="Planet.js"></script>
+		<script type="text/javascript" src="Star.js"></script>
+		<script type="text/javascript" src="SolarSystem.js"></script>
 		<script type="text/javascript" src="main.js"></script>
 	</body>
 </html>
