--- a/index.html
+++ b/index.html
@@ -4,13 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<title>Procedural Space - by Shinigami</title>
-		<style type="text/css">
-		body {
-			margin: 0;
-			overflow: hidden;
-			background-color: black;
-		}
-		</style>
+		<link rel="stylesheet" type="text/css" href="main.css">
 	</head>
 	<body>
 		<!-- Libs -->
