Added particels and fog

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		<script type="text/javascript" src="http://threejs.org/examples/js/postprocessing/EffectComposer.js"></script>
 		<script type="text/javascript" src="http://threejs.org/examples/js/postprocessing/ShaderPass.js"></script>
 		<script type="text/javascript" src="http://threejs.org/examples/js/postprocessing/RenderPass.js"></script>
+		<script type="text/javascript" src="http://threejs.org/examples/js/GPUParticleSystem.js"></script>
 		<!-- App -->
 		<script type="text/javascript" src="Planet.js"></script>
 		<script type="text/javascript" src="Star.js"></script>
