--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
 		<title>
 			<%= htmlWebpackPlugin.options.title %>
 		</title>
+		<link rel="shortcut icon" href="favicon.ico">
 		<!-- <link rel="stylesheet" type="text/css" href="main.css"> -->
 		<style>
 			body {
