fix favicon link

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<title>
 			Procedural Space - by Shinigami
 		</title>
+		<link rel="shortcut icon" href="favicon.ico">
 		<!-- <link rel="stylesheet" type="text/css" href="main.css"> -->
 		<style>
 			body {
